# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project ("Main_OOPZI")

# Включите подпроекты.
add_subdirectory ("OOPZI_task1")
add_subdirectory ("OOPZI_task2")
add_subdirectory ("OOPZI_task3")
add_subdirectory ("OOPZI_task4")
add_subdirectory ("OOPZI_task5")